syntax = "proto2";

package neuro.messages;

message Blob {
  required bytes data = 1;
}

message Timestamp {
  required int32 data = 1;
}

message _NCCAmount {
  required uint64 value = 1;
}

message _KeyPub {
  oneof data {
    bytes raw_data = 2;
    string hex_data = 3;
  }
}

message _KeyPriv {
  required bytes data = 2;
}

message Hash {
  required bytes data = 2;
}

message _Address {
  required string data = 1;
}

message _Peer {
  enum Status {
    CONNECTED = 1;
    CONNECTING = 2;
    DISCONNECTED = 4;
    UNREACHABLE = 8;
    FULL = 16;
  }

  optional string endpoint = 1;
  optional _KeyPub key_pub = 2;
  optional int32 port = 3;
  optional Status status = 4;
  optional Timestamp next_update = 5;
  optional int32 connection_id = 6;
}


