syntax = "proto2";

package neuro.messages;

import "common.proto";
import "messages.proto";

extend Input {
  optional uint32 height = 100;
  optional _NCCAmount amount = 101;
}

message Pii {
  required _Address address = 1;
  required Hash assembly_id = 2;
  required double score = 3;
  required uint32 rank = 4;
}

message Assembly {
  required Hash assembly_id = 1; // This id is the hash of the last block of the assembly
  optional Hash previous_assembly_id = 2;
  required bool finished_computation = 3;
  optional uint32 seed = 4;
  optional uint32 nb_addresses = 5;
}
